# md-to-docx

./: .gitignore  analyze_docx.py  asd.py  convert.py  converter.py  docx_template_extractor.py  docx_test.py  extracted_xml.txt  final_result_pandoc.docx  main.py  md_to_docx_converter.py  mommoath.py  output.docx  pandoc_test.py  pipeline.py  pyproject.toml  readme.md  sample_converted.docx  template_analysis.json  test.py  test2.py  test_.py  test_color_check.docx  test_content.md  test_cover_check.docx  test_no_cover.docx  test_output.docx  test_output_final.docx  test_output_new.docx  test_output_new2.docx  test_output_new3.docx  test_output_new4.docx  test_refactored.docx  test_template_with_placeholders.docx  test_v2_final.docx  test_v2_main.docx  test_v2_output.docx  test_v2_output2.docx  tt.py  예상산출물_한주 토지매각 관련 계약서_IRAC 2_converted.docx  (+1 more)
[Word템플릿]A4_assets/: template_structure.json
docx_only/: Tax AI 질문 리스트(답변 추가).docx  과제4_11주차_2025311605_최윤주.docx  붙임2-1_개인정보수집이용동의서_외부심사위원심사료.docx  조세특례제한법 주요 부칙 모음(202012 ~ 202412).docx  지배주식.docx  지움_TaxAI_UAT_피드백_AI보고서.docx
llm/: __init__.py  prompts.py  vllm_client.py
output_dir/: (주)한주 잉여증기 수급 계약서.docx  20251128_company_554088000.docx  2025년 8월 산업활동동향 보도자료.docx  251201 석간 (보도) 제1회 AI 해킹방어대회(ACDC) 개최(수정).docx  except.docx  presentation-2025-11-25T04-22-44-062Z 1.docx  sample.docx  기준서 적용 방법론_v2_05.11.05 1.docx  기준서적용방법론.docx  예상산출물_한주 토지매각 관련 계약서_IRAC 2.docx  현대모비스.docx
samples/: [Word 템플릿] A4.docx  예상산출물_한주 토지매각 관련 계약서_IRAC 2.md
src/: __init__.py  docx_composer.py  docx_generator.py  llm_content_mapper.py  models.py  (+5 more)
(+3 files in other folders)
